--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
 	    <script src="../node_modules/systemjs/dist/system.js"></script>
 	    <script src="systemjs.conf.js"></script>
 	    <script>
-	      System.import('app/main.js')
+	      System.import('../tmp/app/main.js')
 	        .catch(function(err) { console.error(err); });
 	    </script>
     <!-- endbuild -->
