--- a/src/index.html
+++ b/src/index.html
@@ -79,11 +79,11 @@
   
     <!-- Browser polyfill fixes -->
     <!-- [if lt IE 9] >
-	    <!-- build:js assets/polyfills.js -->
+	    <!- build:js assets/polyfills.js ->
 	      <script type="text/javascript" src="../node_modules/html5shiv/dist/html5shiv.js"></script>
 	      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js"></script>
 	      <script type="text/javascript" src="../node_modules/selectivizr2/selectivizr2.js"></script>
-			<!-- endbuild -->
+			<!- endbuild ->
     <! [endif] -->
 
   </head>
